<resources>
    <string name="app_name">Bocian</string>
    <!--木原-->
    <string name="useHistoryActivity">利用履歴画面</string>
    <string-array name="dateRange">
        <item>月を選択してください</item>
        <item>2018年4月</item>
        <item>2018年5月</item>
        <item>2018年6月</item>
        <item>2018年7月</item>
        <item>2018年8月</item>
        <item>2018年9月</item>
    </string-array>
    <!--斎藤-->
    <string name="bookingConActivity">予約確認画面</string>
    <string-array name="purpose">
        <item>目的を選択してください</item>
        <item>重役会議</item>
        <item>連絡会議</item>
        <item>スケジューリング会議</item>
        <item>アイデア出し会議</item>
        <item>問題解決会議</item>
        <item>問題発見会議</item>
        <item>コーチング会議</item>
        <item>プレゼンテーション</item>
        <item>研修・セミナー</item>
        <item>各種社内イベント</item>
        <item>会社説明会</item>
        <item>筆記試験</item>
        <item>面接</item>
        <item>営業</item>
        <item>打ち合わせ</item>
    </string-array>
    <!--杉原-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_reservation">新規予約</string>
    <string name="nav_header_confirm">予約確認</string>
    <string name="nav_header_schedule">スケジュール</string>
    <string name="nav_header_company">会社情報編集</string>
    <string name="nav_header_usage_history">利用履歴</string>
    <string name="nav_header_manager_login">管理者としてログイン</string>
    <string name="nav_header_manager_logout">ログアウト</string>
    <string name="nav_header_manager">管理者</string>

    <string name="first_fragment">Fragment1</string>
    <string name="second_fragment">Fragment2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--小倉-->
    <string name="extensionActivity">予約延長画面</string>
    <string name="tx_guide_msg_1">まもなく終了時刻です。</string>
    <string name="tx_guide_msg_2">延長時刻を入力してください。</string>
    <string name="tx_end_time">予約終了時刻</string>
    <string name="tx_extension_time">延長終了時刻</string>
    <string name="bt_confirm">確定</string>
    <string name="bt_cancel">キャンセル</string>
    <string name="last_time">21</string>
    <string-array name="spinner_1">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    <string-array name="spinner_2">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>



    <!--佐竹-->
    <string name="add_member">参加者追加画面</string>
    <string name="participant">参加者確認画面</string>
    <string name="add_fixtures">備品追加画面</string>
    <string name="fixtures">備品確認画面</string>
    <string name="register_company">会社登録画面</string>
    <string name="edit_company">会社編集画面</string>
    <string name="edit_reservation">予約編集画面</string>
    <string name="new_reservation">新規予約画面</string>
    <string name="selected_company">編集企業選択画面</string>
    <string name="scheduleActivity">スケジュール画面</string>
    <string name="st1">目的</string>
    <string name="st2">利用日</string>
    <string name="st3">利用開始時刻</string>
    <string name="st4">利用終了時刻</string>
    <string name="st5">会議室</string>
    <string name="st6">予約者</string>
    <string name="st7">参加者</string>
    <string name="st8">参加者一覧</string>
    <string-array name="会議室">
        <item>会議場所</item>
        <item>会議室A</item>
        <item>会議室B</item>
        <item>会議室C</item>
        <item>特別会議室</item>
    </string-array>


    <string-array name="目的">
        <item>使用目的</item>
        <item>重役会議</item>
        <item>連絡会議</item>
        <item>スケジューリング会議</item>
        <item>アイデア出し会議</item>
        <item>問題解決会議</item>
        <item>問題発見会議</item>
        <item>コーチング会議</item>
        <item>プレゼンテーション</item>
        <item>研修・セミナー</item>
        <item>各種社内会議</item>
        <item>会社説明会</item>
        <item>筆記試験</item>
        <item>面接</item>
        <item>営業</item>
        <item>打ち合わせ</item>
    </string-array>

    <string-array name="hourList">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    <string-array name="minList">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>


    <string-array name="nameList">
        <item>赤坂 佑介</item>
        <item>尾張 佳世子</item>
        <item>中 創</item>
        <item>中井 和夫</item>
        <item>沼田 和博</item>
        <item>濱中 真梨子</item>
        <item>藤沢 知也</item>
        <item>三崎 伸子</item>
        <item>宮崎 俊一</item>
        <item>村尾 友彦</item>
        <item>安本 真美</item>
        <item>柳田 裕美子</item>
    </string-array>
    <string-array name="kanaList">
        <item>あかさか ゆうすけ</item>
        <item>おわり かよこ</item>
        <item>なか はじめ</item>
        <item>なかい かずお</item>
        <item>ぬまた かずひろ</item>
        <item>はまなか まりこ</item>
        <item>ふじさわ ともや</item>
        <item>みさき のぶこ</item>
        <item>みやざき しゅんいち</item>
        <item>むらお ともひこ</item>
        <item>やすもと まみ</item>
        <item>やなぎた ゆみこ</item>
    </string-array>
    <string-array name="ageList">
        <item>25歳</item>
        <item>30歳</item>
        <item>28歳</item>
        <item>36歳</item>
        <item>39歳</item>
        <item>45歳</item>
        <item>61歳</item>
        <item>19歳</item>
        <item>34歳</item>
        <item>31歳</item>
        <item>29歳</item>
        <item>37歳</item>
    </string-array>
    <string-array name="postList">
        <item>一般社員</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>課長</item>
        <item>部長</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>主任</item>
    </string-array>
    <string-array name="divisionList">
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>システム部</item>
        <item>総務部</item>
        <item>人事部</item>
        <item>経理部</item>
        <item>営業部</item>
        <item>開発部</item>
        <item>事業部</item>
        <item>企画部</item>
        <item>システム部</item>
    </string-array>
    <string-array name="sectionList">
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第一課</item>
        <item>第二課</item>
        <item>第三課</item>
        <item>第一課</item>
        <item>第二課</item>
        <item>第三課</item>
    </string-array>

    <string-array name="customerNameList">
        <item>吉松 正博</item>
        <item>藁科 慶</item>
        <item>石岡 成美</item>
        <item>川俣 真利子</item>
        <item>石戸 謙</item>
        <item>広末 政彦</item>
        <item>舘林 智明</item>
        <item>吉成 奈緒子</item>
        <item>鶴巻 健人</item>
        <item>西林 侑里</item>
        <item>片上 衛</item>
    </string-array>
    <string-array name="customerKanaList">
        <item>よしまつ まさひろ</item>
        <item>わらしな けい</item>
        <item>いしおか なるみ</item>
        <item>かわまた まりこ</item>
        <item>いしど けん</item>
        <item>ひろすえ まさひこ</item>
        <item>たてばやし ともあき</item>
        <item>よしなり なおこ</item>
        <item>つるまき けんと</item>
        <item>にしばやし ゆり</item>
        <item>かたかみ まもる</item>
    </string-array>
    <string-array name="customerPostList">
        <item>一般社員</item>
        <item>一般社員</item>
        <item>課長</item>
        <item>部長</item>
        <item>主任</item>
        <item>一般社員</item>
        <item>係長</item>
        <item>代表取締役</item>
        <item>一般社員</item>
        <item>一般社員</item>
        <item>主任</item>
    </string-array>

    <string-array name="post">
        <item>取締役会長</item>
        <item>代表取締役</item>
        <item>取締役</item>
        <item>執行役員</item>
        <item>部長</item>
        <item>課長</item>
        <item>係長</item>
        <item>主任</item>
        <item>一般社員</item>
    </string-array>
    <string-array name="社内社外">
        <item>社内</item>
        <item>社外</item>
    </string-array>
    <string-array name="companyList">
        <item>株式会社API</item>
        <item>株式会社APEX</item>
        <item>筒泉銀行株式会社</item>
        <item>株式会社TWW</item>
        <item>日本製造株式会社</item>
        <item>日本IT株式会社</item>
    </string-array>
    <string-array name="countList">
        <item>12人</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="fixtures">
        <item>テーブル</item>
        <item>椅子</item>
        <item>ノートPC</item>
        <item>プリンター</item>
        <item>プロジェクター</item>
        <item>ホワイトボード</item>
        <item>ホワイトボードマーカー</item>
    </string-array>
    <string-array name="fixtures2">
        <item>テーブル</item>
        <item>プロジェクター</item>
        <item>ホワイトボード</item>
        <item>ホワイトボードマーカー</item>
    </string-array>
    <string-array name="num">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="fixturesNum">
        <item>3個</item>
        <item>1個</item>
        <item>2個</item>
        <item>3個</item>
    </string-array>
</resources>
