<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/menu_reservation"
            android:title="@string/nav_header_reservation" />
        <item
            android:id="@+id/nav_confirm"
            android:icon="@drawable/menu_confirm"
            android:title="@string/nav_header_confirm" />
        <item
            android:id="@+id/nav_schdule"
            android:icon="@drawable/menu_schedule"
            android:title="@string/nav_header_schedule" />
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/menu_company"
            android:title="@string/nav_header_company" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/menu_history"
            android:title="@string/nav_header_usage_history" />
    </group>

    <group
        android:id="@+id/menu_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/menu_login"
            android:title="@string/nav_header_manager_login" />
    </group>


</menu>