<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.websarva.wings.android.bociantest.activity.ExtensionActivity">

    <ImageView
        android:id="@+id/extension_img_vi_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clock_128" />

    <TextView
        android:id="@+id/extension_tv_guideMsg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/tx_guide_msg_1"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extension_img_vi_clock" />

    <TextView
        android:id="@+id/extension_tv_guideMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tx_guide_msg_2"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extension_tv_guideMsg1" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extension_tv_guideMsg2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/extension_tv_lastTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="@string/tx_end_time"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extension_lastTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="11:00"
                android:textAlignment="textStart"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/extension_tv_remainingTime_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:text="残り利用時間"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extension_tv_remainingTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="0:30"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/extension_tv_extensionTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.004"
                android:text="@string/tx_extension_time"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/extension_spinar_hour"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="0.5"
                android:dropDownWidth="match_parent"
                android:dropDownVerticalOffset="-500dp"
                android:entries="@array/spinner_1"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/extension_tv_colon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:text="："
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/extension_spinar_minutes"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="0.5"
                android:entries="@array/spinner_2" />
        </LinearLayout>

        <Button
            android:id="@+id/extension_bt_confirm"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="70dp"
            android:text="@string/bt_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/extension_bt_cancel"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/extension_bt_cancel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp"
            android:text="@string/bt_cancel"
            app:layout_constraintEnd_toStartOf="@+id/extension_bt_confirm"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>